--- a/Assessment-5-16-24/src/index.html
+++ b/Assessment-5-16-24/src/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" crossorigin="anonymous">
     <title>Assessment App</title>
 </head>
 <body>
@@ -12,4 +13,5 @@
     </div> 
 </body>
 <script src=“/dist/bundle.js”></script> 
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 </html>
