--- a/ReactApplication/src/index.html
+++ b/ReactApplication/src/index.html
@@ -8,14 +8,13 @@
     <title>React Application</title>
 </head>
 <body>
-        <h1>Loaded by webpack..</h1>
+        <!--<h1>Loaded by webpack..</h1>
         <h1>Again Loaded by webpack..</h1>
         <audio></audio>
-        <video><</video>
+        <video></video>-->
         <div id="root">
-
         </div>
 </body>
-<script src="/dist/bundle.js"></script>
+<!--<script src="/dist/bundle.js"></script>-->
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 </html>
